--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.21.1",
     "date-fns": "^2.23.0",
     "dayjs": "^1.10.6",
+    "dotenv": "^16.0.2",
     "file-saver": "^2.0.5",
     "html2canvas": "^1.3.2",
     "qs": "^6.10.1",
@@ -135,6 +136,7 @@
   "devDependencies": {
     "git-commit-msg-linter": "^3.2.8",
     "husky": "^7.0.2",
-    "lint-staged": "^11.1.2"
+    "lint-staged": "^11.1.2",
+    "parcel": "^2.7.0"
   }
 }
