--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-REACT_APP_API_BASE_URL=http://localhost:4000/
+REACT_APP_API_BASE_URL=http://localhost:5000
 REACT_APP_CLIENT_ID=b00f6d76d8b0696503a7
+REACT_APP_CLIENT_SECRET=de103721527dd7f299153fe2c4cca3281d251bb9
 REACT_APP_REDIRECT_URL=http://localhost:3000
-REACT_APP_BACK_END_URL=http://localhost:4000
