--- a/package.json
+++ b/package.json
@@ -136,7 +136,6 @@
   "devDependencies": {
     "git-commit-msg-linter": "^3.2.8",
     "husky": "^7.0.2",
-    "lint-staged": "^11.1.2",
-    "parcel": "^2.7.0"
+    "lint-staged": "^11.1.2"
   }
 }
