--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "drivent-front",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "dependencies": {
     "@date-io/date-fns": "^1.3.13",
     "@material-ui/core": "^4.12.3",
@@ -10,6 +11,7 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.1",
+    "cors": "^2.8.5",
     "date-fns": "^2.23.0",
     "dayjs": "^1.10.6",
     "dotenv": "^16.0.2",
