--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,3 @@
-REACT_APP_API_BASE_URL=http://localhost:4000/
+REACT_APP_API_BASE_URL=api_backend_uri
 REACT_APP_CLIENT_ID=chave_client_id
-REACT_APP_REDIRECT_URL=http://localhost:3000
+REACT_APP_REDIRECT_URL=uri_to_frontend
